opam-version: "2.0"
maintainer: "hugo.heuzard@gmail.com"
authors: [ "Hugo Heuzard" ]
license: "MIT"
homepage: "https://github.com/besport/ocaml-aliases"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"
  "dune" {build & >= "1.11.0"}
]
dev-repo: "git://github.com/besport/ocaml-aliases"
synopsis: "In memory indexes"
description: """
Implementation of some data structure for :

- temporal index : bitree

- geographic index : quadtree

- string autocomplete : ptree, radix"""
